WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84046
Fix WebKit style violations in Source/Webkit/chromium/public/WebMediaPlayer.h
https://bugs.webkit.org/show_bug.cgi?id=84046
Summary
Fix WebKit style violations in Source/Webkit/chromium/public/WebMediaPlayer.h
Aaron Colwell
Reported
2012-04-16 09:48:39 PDT
WebMediaPlayer.h has several style violations that need fixing: - enum values should be prefixed with the enum name. (Preload::None -> Preload::PreloadNone) - WebTimeRange & WebTimeRanges should be in WebTimeRange.h .
Attachments
Patch
(14.46 KB, patch)
2012-04-16 15:13 PDT
,
Aaron Colwell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2012-04-16 09:59:49 PDT
http://trac.webkit.org/wiki/ChromiumWebKitAPI#Enums
http://trac.webkit.org/wiki/ChromiumWebKitAPI#Types
Aaron Colwell
Comment 2
2012-04-16 15:13:40 PDT
Created
attachment 137412
[details]
Patch
WebKit Review Bot
Comment 3
2012-04-16 15:17:57 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
James Robinson
Comment 4
2012-04-16 15:19:36 PDT
This changes the exposed API, so is there a corresponding chromium patch to update to the new names/etc?
Aaron Colwell
Comment 5
2012-04-16 15:32:23 PDT
(In reply to
comment #4
)
> This changes the exposed API, so is there a corresponding chromium patch to update to the new names/etc?
There will be. I haven't created it yet. I was planning on landing this, WebKit DEPS roll, landing chromium changes to use new enum name, WebKit chromium deps roll. Remove old names.
James Robinson
Comment 6
2012-04-16 15:53:48 PDT
When this rolls into the chromium tree, will the chromium code using this still compile?
Aaron Colwell
Comment 7
2012-04-16 16:49:40 PDT
(In reply to
comment #6
)
> When this rolls into the chromium tree, will the chromium code using this still compile?
Yes. I'm building this patch w/ ToT chrome right now. That is why I still have the old enum values in there. The plan is to land this, update chrome to the new enum value names, and then remove to old names in webkit.
James Robinson
Comment 8
2012-04-16 16:53:53 PDT
Ah gotcha, I missed that you were leaving the old values in as aliases. Proceed!
Aaron Colwell
Comment 9
2012-04-16 16:56:58 PDT
(In reply to
comment #8
)
> Ah gotcha, I missed that you were leaving the old values in as aliases. Proceed!
No problem. Could you please cq+ my patch.
WebKit Review Bot
Comment 10
2012-04-16 17:48:38 PDT
Comment on
attachment 137412
[details]
Patch Clearing flags on attachment: 137412 Committed
r114329
: <
http://trac.webkit.org/changeset/114329
>
WebKit Review Bot
Comment 11
2012-04-16 17:48:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug