Fix WebKit style violations in Chromium WebMediaPlayer.h & WebMediaPlayerClient.h https://bugs.webkit.org/show_bug.cgi?id=84046

Patch by Aaron Colwell <acolwell@chromium.org> on 2012-04-16
Reviewed by Darin Fisher.

* WebKit.gyp:
* public/WebMediaPlayer.h:
(WebKit):
* public/WebMediaPlayerClient.h:
* public/WebTimeRange.h: Copied from Source/WebKit/chromium/public/WebMediaPlayerClient.h.
(WebKit):
(WebKit::WebTimeRange::WebTimeRange):
(WebTimeRange):
* src/AssertMatchingEnums.cpp:

Canonical link: https://commits.webkit.org/101602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114329 268f45cc-cd09-0410-ab3c-d52691b4dbfc